Fix some errors that happened during rebase

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <script src="lib/lexer.js"></script>
     <script src="lib/ast.js"></script>
-    <script src="lib/parser.js"></script>
+    <script src="lib/parse.js"></script>
     <script src="lib/repl.js"></script>
 </body>
 
