--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="lib/lexer.js"></script>
     <script src="lib/ast.js"></script>
     <script src="lib/parse.js"></script>
+    <script src="lib/orderProgram.js"></script>
     <script src="lib/repl.js"></script>
 </body>
 
