support half of evaluation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="lib/parse.js"></script>
     <script src="lib/orderProgram.js"></script>
     <script src="lib/repl.js"></script>
+    <script src="lib/eval.js"></script>
 </body>
 
 
