Add an ahead-of-time compiler.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <script src="lib/orderProgram.js"></script>
     <script src="lib/repl.js"></script>
     <script src="lib/eval.js"></script>
+    <script src="lib/compile.js"></script>
 </body>
 
 
