--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
          .hbox > *,
          .vbox > * {
              flex: 1;
+             overflow: scroll;
          }
 
          body {
@@ -47,16 +48,12 @@
             </select>
             <button id="run">Run</button>
         </div>
-        <textarea id="input">
-10 LET x = 1
-20 PRINT "hello world"
-30 GOTO 50
-40 LET y = 2
-50 IF x THEN 70
-60 LET z = 3
-70 INPUT a
-80 PRINT a
-        </textarea>
+        <select id="programs" style="flex:none">
+            <option value="hello-world">Hello, World!</option>
+            <option value="garbage">Random Garbage</option>
+            <option value="tic-tac-toe">Tic Tac Toe</option>
+        </select>
+        <textarea id="input"></textarea>
     </div>
 
     <pre id="output"></pre>
@@ -68,6 +65,7 @@
     <script src="lib/repl.js"></script>
     <script src="lib/eval.js"></script>
     <script src="lib/compile.js"></script>
+    <script src="lib/programs.js"></script>
 </body>
 
 
