Make tic-tac-toe the first program in the dropdown

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <button id="run">Run</button>
         </div>
         <select id="programs" style="flex:none">
+            <option value="tic-tac-toe" selected>Tic Tac Toe</option>
             <option value="hello-world">Hello, World!</option>
             <option value="garbage">Random Garbage</option>
-            <option value="tic-tac-toe">Tic Tac Toe</option>
         </select>
         <textarea id="input"></textarea>
     </div>
