Add bounce to programs

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </div>
         <select id="programs" style="flex:none">
             <option value="tic-tac-toe" selected>Tic Tac Toe</option>
+            <option value="bounce">Bounce!</option>
             <option value="hello-world">Hello, World!</option>
             <option value="garbage">Random Garbage</option>
         </select>
