Add inline input prompts.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
          #debugger-output {
              border-bottom: 1px #ccc solid;
          }
+
+         .input-prompt {
+           border: 0;
+           font: inherit;
+         }
+
+         .input-prompt[readonly], .input-prompt[disabled] {
+           color: black;
+         }
         </style>
     </head>
 
