Add basic, incomplete VM.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="hbox" style="flex:none">
             <select id="interpret-or-compile">
                 <option value="interpreter">Interpret</option>
+                <option value="vm" selected>Virtual Machine</option>
                 <option value="debugger">Debugger</option>
                 <option value="compiler">Compile and go</option>
             </select>
@@ -97,6 +98,7 @@
     <script src="lib/repl.js"></script>
     <script src="lib/eval.js"></script>
     <script src="lib/compile.js"></script>
+    <script src="lib/vm.js"></script>
     <script src="lib/programs.js"></script>
 </body>
 
