--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="hbox" style="flex:none">
             <select id="interpret-or-compile">
                 <option value="interpreter">Interpret</option>
-                <option value="vm" selected>Virtual Machine</option>
+                <option value="vm">Virtual Machine</option>
                 <option value="debugger">Debugger</option>
                 <option value="compiler">Compile and go</option>
             </select>
