Add basic (not terribly efficient) debugger support to VM. Also fix layout.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
              margin: 0;
          }
 
+         body,
          .hbox {
              display: flex;
              flex-direction: row;
@@ -19,10 +20,11 @@
              flex-direction: column;
          }
 
+         body > .hbox,
          .hbox > *,
          .vbox > * {
              flex: 1;
-             overflow: scroll;
+             overflow: auto;
          }
 
          body {
@@ -52,12 +54,14 @@
         </style>
     </head>
 
-<body class="hbox">
+<body>
+<div class="hbox">
     <div class="vbox">
         <div class="hbox" style="flex:none">
             <select id="interpret-or-compile">
                 <option value="interpreter">Interpret</option>
                 <option value="vm">Virtual Machine</option>
+                <option value="vm-debugger">Debugger (Virtual Machine)</option>
                 <option value="debugger">Debugger</option>
                 <option value="compiler">Compile and go</option>
             </select>
@@ -89,6 +93,7 @@
         </form>
         <pre id="output"></pre>
     </div>
+</div>
 
     <script src="lib/debugger.js"></script>
     <script src="lib/lexer.js"></script>
@@ -100,8 +105,8 @@
     <script src="lib/compile.js"></script>
     <script src="lib/vm.js"></script>
     <script src="lib/programs.js"></script>
-</body>
 
 <!--GITHUB BANNER-->
 <a href="https://github.com/mrrrgn/glowing-guacamole"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+</body>
 </html>
