Remove the non-vm interpreter

--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
         <div class="hbox" style="flex:none">
             <select id="interpret-or-compile">
                 <option value="interpreter">Interpret</option>
-                <option value="vm">Virtual Machine</option>
-                <option value="vm-debugger">Debugger (Virtual Machine)</option>
                 <option value="debugger">Debugger</option>
                 <option value="compiler">Compile and go</option>
             </select>
@@ -101,7 +99,7 @@
     <script src="lib/parse.js"></script>
     <script src="lib/orderProgram.js"></script>
     <script src="lib/repl.js"></script>
-    <script src="lib/eval.js"></script>
+    <script src="lib/builtins.js"></script>
     <script src="lib/compile.js"></script>
     <script src="lib/vm.js"></script>
     <script src="lib/programs.js"></script>
