split up the vm code for easier editing

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
     <script src="lib/repl.js"></script>
     <script src="lib/builtins.js"></script>
     <script src="lib/compile.js"></script>
-    <script src="lib/vm.js"></script>
+    <script src="lib/vm/bytecodes.js"></script>
+    <script src="lib/vm/bytecompiler.js"></script>
+    <script src="lib/vm/vm.js"></script>
     <script src="lib/programs.js"></script>
 
 <!--GITHUB BANNER-->
