--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <button id="run">Run</button>
         </div>
         <select id="programs" style="flex:none">
-            <option value="tic-tac-toe" selected>Tic Tac Toe</option>
-            <option value="bounce">Bounce!</option>
+            <option value="chomp" selected>Chomp!</option>
+            <option value="tic-tac-toe">Tic Tac Toe</option>
             <option value="hello-world">Hello, World!</option>
             <option value="garbage">Random Garbage</option>
         </select>
