--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         <select id="programs" style="flex:none">
             <option value="chomp" selected>Chomp!</option>
             <option value="tic-tac-toe">Tic Tac Toe</option>
-            <option value="hello-world">Hello, World!</option>
-            <option value="garbage">Random Garbage</option>
+            <option value="sinewave">Sine Wave</option>
         </select>
         <div class="hbox">
             <pre id="debugger-gutter" style="display:none; flex:none;"></pre>
