Add hangman to programs

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             <option value="chomp" selected>Chomp!</option>
             <option value="tic-tac-toe">Tic Tac Toe</option>
             <option value="sinewave">Sine Wave</option>
+            <option value="hanoi">Towers of Hanoi</option>
+            <option value="hangman">Hangman</option>
         </select>
         <div class="hbox">
             <pre id="debugger-gutter" style="display:none; flex:none;"></pre>
