Add mandlebrot set program

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <option value="sinewave">Sine Wave</option>
             <option value="hanoi">Towers of Hanoi</option>
             <option value="hangman">Hangman</option>
+            <option value="mandlebrot">Mandlebrot Set (Graphical)</option>
         </select>
         <div class="hbox">
             <pre id="debugger-gutter" style="display:none; flex:none;"></pre>
